# sx3d

./: Cargo.toml  LICENSE  README.md
examples/: twisted_torus.stl
src/: lib.rs  main.rs
src/canvas/: mod.rs  shading.rs  squared_canvas.rs
src/controller/: controller.rs
src/entities/: mesh.rs  mod.rs  object.rs  scene.rs  triangle_2d.rs  triangle_3d.rs  vector_2d.rs  vector_3d.rs  visible_mesh.rs
src/input_output/: cli.rs  console.rs  controller.rs  mod.rs  read_mesh.rs
src/matrix/: matrix.rs
src/scene/: error.rs  mod.rs  object.rs  scene.rs  visible_mesh.rs
src/screen/: matrix.rs  mod.rs
src/utils/: mod.rs
tests/: calculate_shadow_value.rs  dot_product.rs  is_face_visible.rs  is_point_inside_triangle.rs  matrix.rs  object.rs  scene.rs  shading.rs
tests/entities/: mod.rs  object.rs  triangles.rs  tuples.rs
