[package]
name = "sx3d"
version = "0.2.0"
edition = "2021"
authors = ["Luis Arias <ariasb.luis@gmail.com>"]
repository = "https://github.com/luisbedoia/sx3d.git"
license = "MIT OR Apache-2.0"
description = "A simple 3D files viewer on console."
readme = "README.md"
keywords = ["3d", "stl", "obj", "console", "terminal", "viewer", "ascii_art"]
categories = ["graphics", "console", "terminal", "viewer"]

[[bin]]
edition = "2021"
name = "sx3d"
path = "src/main.rs"

[lib]
name = "sx3d"
path = "src/lib.rs"

[profile.release]
lto = true

[dependencies]
rayon = "1.10.0"
stl_io = "0.8.2"
wavefront_obj = "10.0.0"
termion = "4.0.3"
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
assert_float_eq = "1.1.3"